crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@403.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table listp_2 partition of listp for values in(2) partition by list (b);
---
CreateStmt@0..79
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..20
    Ident@13..20 "listp_2"
  Whitespace@20..21 " "
  Partition@21..30 "partition"
  Whitespace@30..31 " "
  Of@31..33 "of"
  Whitespace@33..34 " "
  RangeVar@34..39
    Ident@34..39 "listp"
  Whitespace@39..40 " "
  For@40..43 "for"
  Whitespace@43..44 " "
  Values@44..50 "values"
  Whitespace@50..51 " "
  PartitionBoundSpec@51..55
    InP@51..53 "in"
    Ascii40@53..54 "("
    AConst@54..55
      Iconst@54..55 "2"
  Ascii41@55..56 ")"
  Whitespace@56..57 " "
  PartitionSpec@57..77
    Partition@57..66 "partition"
    Whitespace@66..67 " "
    By@67..69 "by"
    Whitespace@69..70 " "
    Ident@70..74 "list"
    Whitespace@74..75 " "
    Ascii40@75..76 "("
    PartitionElem@76..77
      Ident@76..77 "b"
  Ascii41@77..78 ")"
  Ascii59@78..79 ";"

