crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@41.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table rlp4 partition of rlp for values from (20) to (30) partition by range (a);
---
CreateStmt@0..87
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..17
    Ident@13..17 "rlp4"
  Whitespace@17..18 " "
  Partition@18..27 "partition"
  Whitespace@27..28 " "
  Of@28..30 "of"
  Whitespace@30..31 " "
  RangeVar@31..34
    Ident@31..34 "rlp"
  Whitespace@34..35 " "
  For@35..38 "for"
  Whitespace@38..39 " "
  Values@39..45 "values"
  Whitespace@45..46 " "
  PartitionBoundSpec@46..62
    From@46..50 "from"
    Whitespace@50..51 " "
    Ascii40@51..52 "("
    AConst@52..54
      Iconst@52..54 "20"
    Ascii41@54..55 ")"
    Whitespace@55..56 " "
    To@56..58 "to"
    Whitespace@58..59 " "
    Ascii40@59..60 "("
    AConst@60..62
      Iconst@60..62 "30"
  Ascii41@62..63 ")"
  Whitespace@63..64 " "
  PartitionSpec@64..85
    Partition@64..73 "partition"
    Whitespace@73..74 " "
    By@74..76 "by"
    Whitespace@76..77 " "
    Range@77..82 "range"
    Whitespace@82..83 " "
    Ascii40@83..84 "("
    PartitionElem@84..85
      Ident@84..85 "a"
  Ascii41@85..86 ")"
  Ascii59@86..87 ";"

