crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@417.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table stable_qual_pruning1 partition of stable_qual_pruning\n  for values from ('2000-01-01') to ('2000-02-01');"
---
CreateStmt@0..118
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..33
    Ident@13..33 "stable_qual_pruning1"
  Whitespace@33..34 " "
  Partition@34..43 "partition"
  Whitespace@43..44 " "
  Of@44..46 "of"
  Whitespace@46..47 " "
  RangeVar@47..66
    Ident@47..66 "stable_qual_pruning"
  Newline@66..67 "\n"
  Whitespace@67..69 "  "
  For@69..72 "for"
  Whitespace@72..73 " "
  Values@73..79 "values"
  Whitespace@79..80 " "
  PartitionBoundSpec@80..116
    From@80..84 "from"
    Whitespace@84..85 " "
    Ascii40@85..86 "("
    AConst@86..98
      Sconst@86..98 "'2000-01-01'"
    Ascii41@98..99 ")"
    Whitespace@99..100 " "
    To@100..102 "to"
    Whitespace@102..103 " "
    Ascii40@103..104 "("
    AConst@104..116
      Sconst@104..116 "'2000-02-01'"
  Ascii41@116..117 ")"
  Ascii59@117..118 ";"

